--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -40,5 +40,10 @@
     "game": "Игра",
     "profile": "Профиль",
     "players": "Игроки"
+  },
+  "invite_list": {
+    "invited_users": "Приглашённые пользователи",
+    "no_invites": "Нет приглашённых",
+    "loading": "Загрузка..."
   }
 }
