--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -40,5 +40,11 @@
     "game": "Гра",
     "profile": "Профіль",
     "players": "Гравці"
+  },
+
+  "invite_list": {
+    "invited_users": "Запрошені користувачі",
+    "no_invites": "Немає запрошених",
+    "loading": "Завантаження..."
   }
 }
